Quick authentication stuff.

--- a/server/config.js.template
+++ b/server/config.js.template
@@ -1,13 +1,17 @@
 export default {
-	graylog: {
-		basicAuth: {
-			username: '',
-			password: ''
-		},
-		protocol: 'https',
-		host: '',
-		port: '443',
-		path: ''
-	}
+    graylog: {
+        basicAuth: {
+            username: '',
+            password: ''
+        },
+        protocol: 'https',
+        host: '',
+        port: '443',
+        path: ''
+    },
+    users: [{
+        username: '',
+        password: ''
+    }],
+    password: ''
 };
-
